docs: rewrite README for 26.2 fork with full change documentation
- Document platform upgrade: MC 26.2, Java 25, LWJGL 3.4.1
- Document Sodium 0.9.1 / Iris 1.11.2 compatibility changes
- Document memory management fixes and device loss recovery
- Document Iris SSBO Vulkan interop rewrite
- Document ray tracing pipeline enhancements
- Document XHFP geometry pipeline for Iris 1.11.2

Co-Authored-By: Claude <noreply@anthropic.com>